--- a/Thesis/thesis.tex
+++ b/Thesis/thesis.tex
@@ -31,7 +31,8 @@
 \newcommand{\begeleider}{drs.\ V.\ De Witte en S.\ Schulte}
 \newcommand{\richting}{licentiaat in de informatica, optie: software-ontwikkeling}
 
-%de volgende lijn kiest de juiste naam van de vakgroepvoorzitter en de promotor
+
+\newcommand{\faculteit}{Wetenschappen}
 \newcommand{\vakgroep}{Toegepaste Wiskunde en Informatica}
 \newcommand{\voorzitter}{prof.\ dr.\ Guido\ Vanden\ Berghe}
 \newcommand{\promotor}{prof.\ dr.\ E.\ E.\ Kerre}
