--- a/Thesis/titel.tex
+++ b/Thesis/titel.tex
@@ -17,8 +17,8 @@
 %                 {\futura GENT}}}
 %\put(0,0){\makebox(0,0)[b]{\rule{21mm}{1pt}}}
 %\end{picture}\\
-{\Large  
-Faculteit Wetenschappen\\
+{\Large 
+Faculteit \faculteit\\
 Vakgroep \vakgroep\\
 Voorzitter: \voorzitter
 }\\\vfill
