--- a/Thesis/abstract.tex
+++ b/Thesis/abstract.tex
@@ -45,7 +45,7 @@ het systeem antwoordt met een lijst van relevante beelden. We zorgen er nu echte
 dat de gebruiker een aantal voorbeelden kan kiezen uit die lijst, waarna het
 systeem de zoekresultaten rangschikt op een manier die de gelijkenis met de voorbeelden uitbuit.
 
-Het uiteindelijke doel van dit afstudeerwerk, is de bouw van een prototype dat
+Het uiteindelijke doel van dit afstudeerwerk is de bouw van een prototype dat
 het similariteitsgebaseerd rangschikken van de zoekresultaten implementeert.
 Voor het modelleren van de graduele gelijkenis tussen beelden, maken we daarbij gebruik van 
 vaagsimilariteitsmaten. Om meerdere voorbeelden te kunnen ondersteunen, doen we 
