--- a/Thesis/fundamenten.tex
+++ b/Thesis/fundamenten.tex
@@ -297,7 +297,7 @@ disjunctor kunnen uitgebreid worden naar L-vaag\-ver\-za\-me\-ling\-en. Dat heef
 gevolg dat de veralgemeende verzameltechnische bewerkingen $co$, $\cap$ en 
 $\cup$ uit \ref{sectie:bew_op_vaagverz} eveneens toepasbaar zijn op L-vaagverzamelingen.
 We geven hieronder de definities van die uitbreidingen.
-Hierbij is $(L,\le)$ een complete tralie die $l$ als kleinste en $u$ als grootste element heeft.
+Het koppel $(L,\le)$ is daarbij een complete tralie die $l$ als kleinste en $u$ als grootste element heeft.
 \begin{definitie}
 Een negator $\mathcal{N}$ op $L$ is een dalende $L - L$ afbeelding die voldoet
 aan de randvoorwaarden $\mathcal{N}(l)=u$ en $\mathcal{N}(u)=l$. 
@@ -470,9 +470,9 @@ $wmean_{arith}$ is een voorbeeld van een dergelijke operator:
 wmean_{arith}(x_1,x_2,\ldots,x_n)=\sum_{i=1}^n w_i \cdot x_i
 \end{displaymath}
 voor alle $(x_1,x_2,\ldots,x_n) \in [0,1]^n$, met
-$n \in \mathbb{N}\setminus\{0\}$, 
-$(w_1,w_2,\ldots,w_n) \in \{w \in \mathbb{R}^n \mid w \ge 0\}$ en
-$\sum_{i=1}^n w_i = 1$.
+$n \in \mathbb{N}\setminus\{0\}$ en
+$(w_1,w_2,\ldots,w_n)$ een element van $\mathbb{R}^n$ waarvoor
+$w_i \ge 0$ voor elke $i \in \{1,2,\ldots,n\}$ en $\sum_{i=1}^n w_i = 1$.
 
 \end{description}
 In \cite{detyniecki:numerical_aggregation_operators} wordt er een overzicht gegeven van
