--- a/Thesis/beeldverwerking.tex
+++ b/Thesis/beeldverwerking.tex
@@ -85,7 +85,7 @@ met $r,g,b \in [0,1]$ de co\"ordinaten van de beschouwde kleur in het RGB-model.
 Het I1I2I3-model, dat voorgesteld werd door Ohta 
 \cite{ohta:color_info_for_region_segm}, is een \defin{opponent color model}. 
 Dat wil zeggen dat het een additief kleurmodel is, waarbij elke as de overgang
-tussen twee constrasterende kleuren voorstelt (rood-groen, geel-blauw en zwart-wit).
+tussen twee contrasterende kleuren voorstelt (rood-groen, geel-blauw en zwart-wit).
 We zetten een kleur $(r,g,b) \in 
 [0,1]^3$ uit het RGB-model als volgt om:
 \begin{displaymath}
@@ -111,7 +111,7 @@ x & = 0.4124 \cdot r + 0.3576 \cdot g + 0.1805 \cdot b \\
 y & = 0.2126 \cdot r + 0.7152 \cdot g + 0.0722 \cdot b \\
 z & = 0.0193 \cdot r + 0.1192 \cdot g + 0.9505 \cdot b
 \end{align*}
-met $(r,g,b) \in [0,1]^3$ de vector van de kleur in het RGB-model. Hierbij 
+met $(r,g,b) \in [0,1]^3$ de vector van de kleur in het RGB-model. Daarbij 
 is $y$ evenredig met de luminantie van de kleur in kwestie. 
 
 De eerste component van een kleur in het Yxy-model is gelijk aan de $y$ 
@@ -143,7 +143,7 @@ t^\frac{1}{3} & \textrm{als } t > 0.008856 \\
 voor elke re\"ele $t$. Hierbij zijn $x_0$, $y_0$ en $z_0$ de
 XYZ-co\"ordinaten van een wit referentiepunt. We gebruiken hier 
 $255 \cdot (x_0,y_0,z_0)=(95.05,100,108.9)$.
-We kunnen dan als volgt normaliseren:
+Er kan dan als volgt genormaliseerd worden:
 \begin{displaymath}
 l' = \frac{l}{100} \qquad a' = \frac{120 + 
 \max\{\min\{a,120\},-120\}}{240} \qquad b' = \frac{120 + \max\{\min\{b,120\},-120\}}{240}
@@ -177,9 +177,8 @@ b(x,y) & \textrm{als } 0 \le x < M \textrm{ en } 0 \le y < N \\
 
 Een kleurruimte bevat meestal een groot aantal 
 kleuren. Zo gebruikt men voor een RGB-ruimte bijvoorbeeld typisch 8 bits per 
-kleurcomponent. Dit geeft een totaal van 24 bits per kleur, zodat men dus 
-$2^{24}=2^4 \cdot 2^{20}=16 \cdot 2^{20} \approx 16 \cdot 10^6$ kleuren kan 
-voorstellen.
+kleurcomponent. Dat geeft een totaal van 24 bits per kleur, zodat er dus
+$2^{24}=2^4 \cdot 2^{20}=16 \cdot 2^{20} \approx 16 \cdot 10^6$ mogelijke kleuren zijn.
 Om de complexiteit te beperken, kan het dus nodig zijn om het aantal kleuren te 
 reduceren. Dat kan door middel van \defin{kleurkwantisatie}, waarbij de kleuren 
 gegroepeerd worden in
@@ -199,8 +198,8 @@ tweede functie kan men dan de kleur van die bin bepalen.
 \subsection{Uniforme kwantisatie}
 
 Bij \defin{uniforme kwantisatie} wordt elke kleurcomponent uniform verdeeld in een 
-aantal intervallen. Als we zorgen dat $C=[0,1]^l$, $l > 0$, dan kunnen we de 
-volgende definitie voor $bin$ gebruiken:
+aantal intervallen. Als we zorgen dat $C=[0,1]^l$, $l \in \mathbb{N} \setminus \{0\}$, 
+dan kunnen we de volgende definitie voor $bin$ gebruiken:
 \begin{displaymath}
 \begin{array}{lrcll}
 bin: & C & \to & \{1,2,...,N\}\\[5pt] & (c_1,c_2,\ldots,c_l) & \mapsto & \left[ 
@@ -217,18 +216,24 @@ n - 1 & \textrm{als } x = 1
 \end{cases}
 \end{displaymath}
 voor alle $x \in [0,1]$ en $n \in \mathbb{N}$. De middelste waarden van de 
-intervallen doen dan dienst als componenten van de kleur van een bin:
+intervallen doen daarbij dienst als componenten van de kleur van een bin:
 \begin{displaymath}
 \begin{array}{lrcll}
 col: & \{1,2,\ldots,N\} & \to & C \\ & n & \mapsto & (col_1(n), col_2(n), 
 \dots, col_l(n)), & \forall n \in \{1,2,\ldots,N\}
 \end{array}
 \end{displaymath}
-waarbij 
+met 
 \begin{displaymath}
-col_i(n) = \frac{n-1}{\prod_{j=1}^i N_j} + \frac{1}{2 \cdot N_i}
+col_k(n) = \frac{1}{N_k}\cdot\left\lfloor\frac{\left[\left[\left[(n-1) \bmod \prod_{i=1}^l N_i\right] \bmod \prod_{i=1}^{l-1}N_i\right] \ldots \right] \bmod \prod_{i=1}^k N_i\,}{\prod_{i=1}^{k-1} N_i}\right\rfloor + \frac{1}{2 \cdot N_k}
 \end{displaymath} 
-voor alle $n \in \{1,2,\ldots,N\}$ en $i \in \{1,2,\ldots,l\}$. Figuur~\ref{fig:bin_en_col}
+voor alle $n \in \{1,2,\ldots,N\}$ en $k \in \{1,2,\ldots,l\}$. Merk op dat dan geldt:
+\begin{align*}
+col_k(bin(c)) 
+&= \frac{1}{N_k}\cdot\left\lfloor \mathit{fl}(c_k,N_k) + \frac{1}{\prod_{i=1}^{k-1} N_i}\cdot\sum_{i=1}^{k-1} \left( \prod_{j=1}^{i-1} N_j \right) \mathit{fl}(c_i, N_i)\right\rfloor + \frac{1}{2 \cdot N_k}\\[2pt]
+&= \frac{\mathit{fl}(c_k,N_k)}{N_k}+\frac{1}{2\cdot N_k}
+\end{align*}
+voor alle $k \in \{1,2,\ldots,l\}$. Figuur~\ref{fig:bin_en_col}
 illustreert de werking van $bin$ en $col$ voor $l=1$ en $N=4$.
 
 \begin{figure}[!bp]
@@ -236,7 +241,7 @@ illustreert de werking van $bin$ en $col$ voor $l=1$ en $N=4$.
 \centering
 \includegraphics[height=3.6cm]{images/bin_en_col.eps}
 \vspace{10pt}
-\caption{\label{fig:bin_en_col}Illustratie van $bin$ en $col$ voor $l=1$ en $N=1$.}
+\caption{\label{fig:bin_en_col}Illustratie van de werking van $bin$ en $col$ voor $l=1$ en $N=1$.}
 \end{figure}
 
 Bij image retrieval is doorgaans vooral de kleurtint op zich belangrijk. Door
@@ -544,7 +549,7 @@ we kwantisatie trouwens louter om meer performante similariteitsmaten te constru
 van de gekwantiseerde beelden is daarbij minder belangrijk. Similariteitsmaten op basis van kwantisatietechnieken 
 waarbij de gekwantiseerde beelden een lagere kwaliteit hebben, presteren immers niet noodzakelijk
 slechter dan maten die gebaseerd zijn op ``betere'' kwantisatietechnieken. Zo zouden we bijvoorbeeld 
-betere kwantisatie kunnen bekomen door extra luminantiedata te behouden, maar daardoor zullen
+de kwaliteit van de gekwantiseerde beelden kunnen verhogen door extra luminantiedata te behouden, maar daardoor zullen
 de similariteitsmaten doorgaans minder goed werken vermits ze dan gevoeliger worden voor 
 belichtingsvariaties.
 %kunnen in bepaalde gevallen immers beter 
