--- a/Thesis/implementatie.tex
+++ b/Thesis/implementatie.tex
@@ -87,7 +87,7 @@ beelden. Codefragement~\ref{code:simple_example} bevat een zeer eenvoudig
 \input{code/SimpleExample.java.tex}
 \end{lgrind}
 \vspace{5pt}
-\caption{\label{code:simple_example}Simpel voorbeeldprogramma dat het gebruik van
+\caption{\label{code:simple_example}Eenvoudig voorbeeldprogramma dat het gebruik van
 de klasse {\klassefont Imilarity} illustreert.}
 \end{code}
 voorbeeldprogramma dat het gebruik van die klasse illustreert. Het commando
