--- a/Thesis/slotbeschouwingen.tex
+++ b/Thesis/slotbeschouwingen.tex
@@ -14,8 +14,11 @@ We gebruiken die idee om similariteitsmaten voor beelden te construeren.
 %identificeren met vaagverzamelingen te combineren met een vaagsimilariteitsmaat.
 Een eerste bijdrage van dit eindwerk is het herschrijven van de beschouwde
 vaagsimilariteitsmaten naar een vorm die, onder bepaalde voorwaarden, een stuk
-sneller kan berekend worden. Op basis van die herschreven vaagsimilariteitsmaten
-hebben we twee types van similariteitsmaten ge\"implementeerd.
+sneller kan berekend worden. 
+%Op basis van die herschreven vaagsimilariteitsmaten
+%hebben we twee types van similariteitsmaten ge\"implementeerd.
+De similariteitsmaten die we op basis van die herschreven vaagsimilariteitsmaten
+geconstrueerd hebben, kunnen onderverdeeld worden in twee types. 
 
 De maten van het eerste type, waarbij het universum bestaat uit beeldpunten, 
 noemen we pixelgebaseerde similariteitsmaten. Similariteitsmaten die 
