--- a/Thesis/fundamenten.tex
+++ b/Thesis/fundamenten.tex
@@ -462,7 +462,7 @@ niet conjunctief, disjunctief of compenserend zijn. \emph{Symmetrische sommen}
 \cite{grabisch:fuzzy_aggregation_of_numerical_preferences} zijn
 voorbeelden van dergelijke operatoren.
 \item[gewogen operatoren] Gewogen operatoren zijn uitbreidingen van operatoren
-uit \'e\'en van de bovenstaande categori\"en, waarbij het belang van elk van de 
+uit \'e\'en van de bovenstaande categorie\"en, waarbij het belang van elk van de 
 te aggregeren waarden kan opgegeven worden. Het 
 \definas{rekenkundig gemiddelde!gewogen}{gewogen rekenkundig gemiddelde}
 $wmean_{arith}$ is een voorbeeld van een dergelijke operator:
