--- a/Thesis/inleiding.tex
+++ b/Thesis/inleiding.tex
@@ -128,7 +128,7 @@ Beschouw bijvoorbeeld de zoekresultaten uit figuur~\ref{fig:resultaten_orig_bana
 we effectief op zoek zijn naar een beeld van een banaan, dan zijn het
 eerste en het voorlaatste beeld vrij goede resultaten. Bij een uitbreiding die het 
 similariteitsgebaseerd rangschikken implementeert, kunnen die beelden als
-voobeeld opgegeven worden. Via \'e\'en van de technieken die we verder in dit
+voorbeeld opgegeven worden. Via \'e\'en van de technieken die we verder in dit
 eindwerk bespreken, bekomen we dan de rangschikking uit 
 figuur~\ref{fig:resultaten_sorted_banaan}. Die rangschikking kan eventueel nog 
 verder verfijnd worden door bijkomende voorbeelden op te geven.
