--- a/Thesis/similariteit.tex
+++ b/Thesis/similariteit.tex
@@ -378,7 +378,7 @@ sommaties waarvan het bereik beperkt is.}
 
 Beschouw nu bijvoorbeeld $M_{5}$:
 \begin{displaymath}
-M_{5} = \frac{\min\{|A|,|B|\}}{\max\{|A|,|B|\}} = \frac{\min\{||A||,||B||\}}{\max\{||A||,||B||\}}
+M_{5}(A,B) = \frac{\min\{|A|,|B|\}}{\max\{|A|,|B|\}} = \frac{\min\{||A||,||B||\}}{\max\{||A||,||B||\}}
 \end{displaymath}
 Bij de oude formule zijn er eerst $2 \cdot (|X|-1)$ optellingen nodig
 om $|A|$ en $|B|$ te berekenen. Daarna moeten de zo bekomen getallen met elkaar vergeleken worden
