--- a/Thesis/slotbeschouwingen.tex
+++ b/Thesis/slotbeschouwingen.tex
@@ -71,7 +71,7 @@ van beelden. Het andere programma is het eigenlijke prototype.
 \section{Overblijvende onderzoeksmogelijkheden}
 
 In \ref{sectie:rekentijd} hebben we vermeld dat het bij echte CBIR mogelijk is
-om berekeneningen op voorhand te doen. Zo zouden de histogrammen van de beelden
+om berekeningen vooraf te doen. Zo zouden de histogrammen van de beelden
 bijvoorbeeld mee opgeslagen kunnen worden in de databank. Bij echte CBIR kunnen
 er daarom ook meer complexe similariteitsmaten gebruikt worden. Door de beelden
 op voorhand te segmenteren, zou het bijvoorbeeld mogelijk zijn om bij het vergelijken
